WIP clean-up, new themes

--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -1,5 +1,8 @@
 <div class="yolo-syntax-theme-swatches">
     <h4 class="no-toc">Background and Text</h4>
+    <blockquote>
+        <p><strong>Note</strong>: The container color is applied to the background of code blocks, and the text color to text/code not styled by a syntax token.</p>
+    </blockquote>
     <div class="columns">
         <div class="column">
             <div class="yolo-swatch is-family-monospace syntax-container-color">
@@ -17,6 +20,9 @@
         </div>
     </div>
     <h4 class="no-toc">Syntax Tokens</h4>
+    <blockquote>
+        <p><strong>Note</strong>: Click each Syntax Token pill to see the syntax-theme colors in use.</p>
+    </blockquote>
     <div class="yolo-tabs">
         <button class="yolo-tab-button yolo-tab-links" data-open-tab="nameTokens">Name</button>
         <button class="yolo-tab-button yolo-tab-links" data-open-tab="stringTokens">String</button>
