--- a/_sass/yolo/brand/syntax/_cooleo.scss
+++ b/_sass/yolo/brand/syntax/_cooleo.scss
@@ -5,15 +5,15 @@ $light-syntax-text: #f72685;
 $light-syntax-container-color: #21065f;
 $light-syntax-highlight-line: #f72685;
 $light-syntax-error: #f72685;
-$light-syntax-punctuation: #f72685;
+$light-syntax-punctuation: #fff;
 $light-syntax-text-whitespace: #f72685;
-$light-syntax-comment-hashbang: #f72685;
-$light-syntax-comment-multiline: #f72685;
-$light-syntax-comment-preproc: #f72685;
-$light-syntax-comment-preprocfile: #f72685;
-$light-syntax-comment-single: #f72685;
-$light-syntax-comment-special: #f72685;
-$light-syntax-comment: #f72685;
+$light-syntax-comment-hashbang: #fff;
+$light-syntax-comment-multiline: #fff;
+$light-syntax-comment-preproc: #fff;
+$light-syntax-comment-preprocfile: #fff;
+$light-syntax-comment-single: #fff;
+$light-syntax-comment-special: #fff;
+$light-syntax-comment: #fff;
 $light-syntax-generic-deleted: #f72685;
 $light-syntax-generic-emph: #f72685;
 $light-syntax-generic-error: #f72685;
@@ -24,13 +24,13 @@ $light-syntax-generic-prompt: #f72685;
 $light-syntax-generic-strong: #f72685;
 $light-syntax-generic-subheading: #f72685;
 $light-syntax-generic-traceback: #f72685;
-$light-syntax-keyword-constant: #f72685;
-$light-syntax-keyword-declaration: #f72685;
-$light-syntax-keyword-namespace: #f72685;
-$light-syntax-keyword-pseudo: #f72685;
-$light-syntax-keyword-reserved: #f72685;
-$light-syntax-keyword-type: #f72685;
-$light-syntax-keyword: #f72685;
+$light-syntax-keyword-constant: #fff;
+$light-syntax-keyword-declaration: #fff;
+$light-syntax-keyword-namespace: #fff;
+$light-syntax-keyword-pseudo: #fff;
+$light-syntax-keyword-reserved: #fff;
+$light-syntax-keyword-type: #fff;
+$light-syntax-keyword: #fff;
 $light-syntax-literal-date: #f72685;
 $light-syntax-literal: #f72685;
 $light-syntax-name-attribute: #f72685;
@@ -54,15 +54,15 @@ $light-syntax-name-variable-instance: #f72685;
 $light-syntax-name-variable-magic: #f72685;
 $light-syntax-name-variable: #f72685;
 $light-syntax-name: #f72685;
-$light-syntax-number-bin: #f72685;
-$light-syntax-number-float: #f72685;
-$light-syntax-number-hex: #f72685;
-$light-syntax-number-integer-long: #f72685;
-$light-syntax-number-integer: #f72685;
-$light-syntax-number-oct: #f72685;
-$light-syntax-number: #f72685;
-$light-syntax-operator-word: #f72685;
-$light-syntax-operator: #f72685;
+$light-syntax-number-bin: #fff;
+$light-syntax-number-float: #fff;
+$light-syntax-number-hex: #fff;
+$light-syntax-number-integer-long: #fff;
+$light-syntax-number-integer: #fff;
+$light-syntax-number-oct: #fff;
+$light-syntax-number: #fff;
+$light-syntax-operator-word: #fff;
+$light-syntax-operator: #fff;
 $light-syntax-string-affix: #f72685;
 $light-syntax-string-backtick: #f72685;
 $light-syntax-string-char: #f72685;
@@ -84,15 +84,15 @@ $dark-syntax-text: #21065f;
 $dark-syntax-container-color: #f72685;
 $dark-syntax-highlight-line: #21065f;
 $dark-syntax-error: #21065f;
-$dark-syntax-punctuation: #21065f;
+$dark-syntax-punctuation: #fff;
 $dark-syntax-text-whitespace: #21065f;
-$dark-syntax-comment-hashbang: #21065f;
-$dark-syntax-comment-multiline: #21065f;
-$dark-syntax-comment-preproc: #21065f;
-$dark-syntax-comment-preprocfile: #21065f;
-$dark-syntax-comment-single: #21065f;
-$dark-syntax-comment-special: #21065f;
-$dark-syntax-comment: #21065f;
+$dark-syntax-comment-hashbang: #fff;
+$dark-syntax-comment-multiline: #fff;
+$dark-syntax-comment-preproc: #fff;
+$dark-syntax-comment-preprocfile: #fff;
+$dark-syntax-comment-single: #fff;
+$dark-syntax-comment-special: #fff;
+$dark-syntax-comment: #fff;
 $dark-syntax-generic-deleted: #21065f;
 $dark-syntax-generic-emph: #21065f;
 $dark-syntax-generic-error: #21065f;
@@ -103,13 +103,13 @@ $dark-syntax-generic-prompt: #21065f;
 $dark-syntax-generic-strong: #21065f;
 $dark-syntax-generic-subheading: #21065f;
 $dark-syntax-generic-traceback: #21065f;
-$dark-syntax-keyword-constant: #21065f;
-$dark-syntax-keyword-declaration: #21065f;
-$dark-syntax-keyword-namespace: #21065f;
-$dark-syntax-keyword-pseudo: #21065f;
-$dark-syntax-keyword-reserved: #21065f;
-$dark-syntax-keyword-type: #21065f;
-$dark-syntax-keyword: #21065f;
+$dark-syntax-keyword-constant: #fff;
+$dark-syntax-keyword-declaration: #fff;
+$dark-syntax-keyword-namespace: #fff;
+$dark-syntax-keyword-pseudo: #fff;
+$dark-syntax-keyword-reserved: #fff;
+$dark-syntax-keyword-type: #fff;
+$dark-syntax-keyword: #fff;
 $dark-syntax-literal-date: #21065f;
 $dark-syntax-literal: #21065f;
 $dark-syntax-name-attribute: #21065f;
@@ -133,15 +133,15 @@ $dark-syntax-name-variable-instance: #21065f;
 $dark-syntax-name-variable-magic: #21065f;
 $dark-syntax-name-variable: #21065f;
 $dark-syntax-name: #21065f;
-$dark-syntax-number-bin: #21065f;
-$dark-syntax-number-float: #21065f;
-$dark-syntax-number-hex: #21065f;
-$dark-syntax-number-integer-long: #21065f;
-$dark-syntax-number-integer: #21065f;
-$dark-syntax-number-oct: #21065f;
-$dark-syntax-number: #21065f;
-$dark-syntax-operator-word: #21065f;
-$dark-syntax-operator: #21065f;
+$dark-syntax-number-bin: #fff;
+$dark-syntax-number-float: #fff;
+$dark-syntax-number-hex: #fff;
+$dark-syntax-number-integer-long: #fff;
+$dark-syntax-number-integer: #fff;
+$dark-syntax-number-oct: #fff;
+$dark-syntax-number: #fff;
+$dark-syntax-operator-word: #fff;
+$dark-syntax-operator: #fff;
 $dark-syntax-string-affix: #21065f;
 $dark-syntax-string-backtick: #21065f;
 $dark-syntax-string-char: #21065f;
