--- a/_sass/yolo/brand/syntax/_corbs.scss
+++ b/_sass/yolo/brand/syntax/_corbs.scss
@@ -25,11 +25,11 @@ $light-syntax-generic-strong: #f72685;
 $light-syntax-generic-subheading: #ecefff;
 $light-syntax-generic-traceback: #ecefff;
 $light-syntax-keyword-constant: #f72685;
-$light-syntax-keyword-declaration: #3b6afe;
+$light-syntax-keyword-declaration: #668efb;
 $light-syntax-keyword-namespace: #f72685;
 $light-syntax-keyword-pseudo: #f72685;
 $light-syntax-keyword-reserved: #f72685;
-$light-syntax-keyword-type: #3b6afe;
+$light-syntax-keyword-type: #668efb;
 $light-syntax-keyword: #f72685;
 $light-syntax-literal-date: #ecefff;
 $light-syntax-literal: #ecefff;
@@ -63,20 +63,20 @@ $light-syntax-number-oct: #8b59ff;
 $light-syntax-number: #8b59ff;
 $light-syntax-operator-word: #50fa7b;
 $light-syntax-operator: #50fa7b;
-$light-syntax-string-affix: #bf3efd;
-$light-syntax-string-backtick: #bf3efd;
-$light-syntax-string-char: #bf3efd;
-$light-syntax-string-delimiter: #bf3efd;
-$light-syntax-string-doc: #bf3efd;
+$light-syntax-string-affix: #c566fa;
+$light-syntax-string-backtick: #c566fa;
+$light-syntax-string-char: #c566fa;
+$light-syntax-string-delimiter: #c566fa;
+$light-syntax-string-doc: #c566fa;
 $light-syntax-string-double: #32cdff;
-$light-syntax-string-escape: #bf3efd;
-$light-syntax-string-heredoc: #bf3efd;
-$light-syntax-string-interpol: #bf3efd;
+$light-syntax-string-escape: #c566fa;
+$light-syntax-string-heredoc: #c566fa;
+$light-syntax-string-interpol: #c566fa;
 $light-syntax-string-other: #32cdff;
-$light-syntax-string-regex: #bf3efd;
+$light-syntax-string-regex: #c566fa;
 $light-syntax-string-single: #32cdff;
-$light-syntax-string-symbol: #bf3efd;
-$light-syntax-string: #bf3efd;
+$light-syntax-string-symbol: #c566fa;
+$light-syntax-string: #c566fa;
 // ----------------------------------------------------------------------------
 // corbs dark-mode syntax theme
 // ----------------------------------------------------------------------------
@@ -104,11 +104,11 @@ $dark-syntax-generic-strong: #f72685;
 $dark-syntax-generic-subheading: #ecefff;
 $dark-syntax-generic-traceback: #ecefff;
 $dark-syntax-keyword-constant: #f72685;
-$dark-syntax-keyword-declaration: #3b6afe;
+$dark-syntax-keyword-declaration: #668efb;
 $dark-syntax-keyword-namespace: #f72685;
 $dark-syntax-keyword-pseudo: #f72685;
 $dark-syntax-keyword-reserved: #f72685;
-$dark-syntax-keyword-type: #3b6afe;
+$dark-syntax-keyword-type: #668efb;
 $dark-syntax-keyword: #f72685;
 $dark-syntax-literal-date: #ecefff;
 $dark-syntax-literal: #ecefff;
@@ -142,17 +142,17 @@ $dark-syntax-number-oct: #8b59ff;
 $dark-syntax-number: #8b59ff;
 $dark-syntax-operator-word: #50fa7b;
 $dark-syntax-operator: #50fa7b;
-$dark-syntax-string-affix: #bf3efd;
-$dark-syntax-string-backtick: #bf3efd;
-$dark-syntax-string-char: #bf3efd;
-$dark-syntax-string-delimiter: #bf3efd;
-$dark-syntax-string-doc: #bf3efd;
+$dark-syntax-string-affix: #c566fa;
+$dark-syntax-string-backtick: #c566fa;
+$dark-syntax-string-char: #c566fa;
+$dark-syntax-string-delimiter: #c566fa;
+$dark-syntax-string-doc: #c566fa;
 $dark-syntax-string-double: #32cdff;
-$dark-syntax-string-escape: #bf3efd;
-$dark-syntax-string-heredoc: #bf3efd;
-$dark-syntax-string-interpol: #bf3efd;
+$dark-syntax-string-escape: #c566fa;
+$dark-syntax-string-heredoc: #c566fa;
+$dark-syntax-string-interpol: #c566fa;
 $dark-syntax-string-other: #32cdff;
-$dark-syntax-string-regex: #bf3efd;
+$dark-syntax-string-regex: #c566fa;
 $dark-syntax-string-single: #32cdff;
-$dark-syntax-string-symbol: #bf3efd;
-$dark-syntax-string: #bf3efd;
+$dark-syntax-string-symbol: #c566fa;
+$dark-syntax-string: #c566fa;
