--- a/_sass/yolo/brand/syntax/_folly.scss
+++ b/_sass/yolo/brand/syntax/_folly.scss
@@ -5,15 +5,15 @@ $light-syntax-text: #ff6a1e;
 $light-syntax-container-color: #1f0053;
 $light-syntax-highlight-line: #ff6a1e;
 $light-syntax-error: #ff6a1e;
-$light-syntax-punctuation: #ff6a1e;
+$light-syntax-punctuation: #ffe4d6;
 $light-syntax-text-whitespace: #ff6a1e;
-$light-syntax-comment-hashbang: #ff6a1e;
-$light-syntax-comment-multiline: #ff6a1e;
-$light-syntax-comment-preproc: #ff6a1e;
-$light-syntax-comment-preprocfile: #ff6a1e;
-$light-syntax-comment-single: #ff6a1e;
-$light-syntax-comment-special: #ff6a1e;
-$light-syntax-comment: #ff6a1e;
+$light-syntax-comment-hashbang: #ffe4d6;
+$light-syntax-comment-multiline: #ffe4d6;
+$light-syntax-comment-preproc: #ffe4d6;
+$light-syntax-comment-preprocfile: #ffe4d6;
+$light-syntax-comment-single: #ffe4d6;
+$light-syntax-comment-special: #ffe4d6;
+$light-syntax-comment: #ffe4d6;
 $light-syntax-generic-deleted: #ff6a1e;
 $light-syntax-generic-emph: #ff6a1e;
 $light-syntax-generic-error: #ff6a1e;
@@ -24,13 +24,13 @@ $light-syntax-generic-prompt: #ff6a1e;
 $light-syntax-generic-strong: #ff6a1e;
 $light-syntax-generic-subheading: #ff6a1e;
 $light-syntax-generic-traceback: #ff6a1e;
-$light-syntax-keyword-constant: #ff6a1e;
-$light-syntax-keyword-declaration: #ff6a1e;
-$light-syntax-keyword-namespace: #ff6a1e;
-$light-syntax-keyword-pseudo: #ff6a1e;
-$light-syntax-keyword-reserved: #ff6a1e;
-$light-syntax-keyword-type: #ff6a1e;
-$light-syntax-keyword: #ff6a1e;
+$light-syntax-keyword-constant: #ffe4d6;
+$light-syntax-keyword-declaration: #ffe4d6;
+$light-syntax-keyword-namespace: #ffe4d6;
+$light-syntax-keyword-pseudo: #ffe4d6;
+$light-syntax-keyword-reserved: #ffe4d6;
+$light-syntax-keyword-type: #ffe4d6;
+$light-syntax-keyword: #ffe4d6;
 $light-syntax-literal-date: #ff6a1e;
 $light-syntax-literal: #ff6a1e;
 $light-syntax-name-attribute: #ff6a1e;
@@ -54,13 +54,13 @@ $light-syntax-name-variable-instance: #ff6a1e;
 $light-syntax-name-variable-magic: #ff6a1e;
 $light-syntax-name-variable: #ff6a1e;
 $light-syntax-name: #ff6a1e;
-$light-syntax-number-bin: #ff6a1e;
-$light-syntax-number-float: #ff6a1e;
-$light-syntax-number-hex: #ff6a1e;
-$light-syntax-number-integer-long: #ff6a1e;
-$light-syntax-number-integer: #ff6a1e;
-$light-syntax-number-oct: #ff6a1e;
-$light-syntax-number: #ff6a1e;
+$light-syntax-number-bin: #ffe4d6;
+$light-syntax-number-float: #ffe4d6;
+$light-syntax-number-hex: #ffe4d6;
+$light-syntax-number-integer-long: #ffe4d6;
+$light-syntax-number-integer: #ffe4d6;
+$light-syntax-number-oct: #ffe4d6;
+$light-syntax-number: #ffe4d6;
 $light-syntax-operator-word: #ff6a1e;
 $light-syntax-operator: #ff6a1e;
 $light-syntax-string-affix: #ff6a1e;
@@ -84,15 +84,15 @@ $dark-syntax-text: #1f0053;
 $dark-syntax-container-color: #ff6a1e;
 $dark-syntax-highlight-line: #1f0053;
 $dark-syntax-error: #1f0053;
-$dark-syntax-punctuation: #1f0053;
+$dark-syntax-punctuation: #ffe4d6;
 $dark-syntax-text-whitespace: #1f0053;
-$dark-syntax-comment-hashbang: #1f0053;
-$dark-syntax-comment-multiline: #1f0053;
-$dark-syntax-comment-preproc: #1f0053;
-$dark-syntax-comment-preprocfile: #1f0053;
-$dark-syntax-comment-single: #1f0053;
-$dark-syntax-comment-special: #1f0053;
-$dark-syntax-comment: #1f0053;
+$dark-syntax-comment-hashbang: #ffe4d6;
+$dark-syntax-comment-multiline: #ffe4d6;
+$dark-syntax-comment-preproc: #ffe4d6;
+$dark-syntax-comment-preprocfile: #ffe4d6;
+$dark-syntax-comment-single: #ffe4d6;
+$dark-syntax-comment-special: #ffe4d6;
+$dark-syntax-comment: #ffe4d6;
 $dark-syntax-generic-deleted: #1f0053;
 $dark-syntax-generic-emph: #1f0053;
 $dark-syntax-generic-error: #1f0053;
@@ -103,13 +103,13 @@ $dark-syntax-generic-prompt: #1f0053;
 $dark-syntax-generic-strong: #1f0053;
 $dark-syntax-generic-subheading: #1f0053;
 $dark-syntax-generic-traceback: #1f0053;
-$dark-syntax-keyword-constant: #1f0053;
-$dark-syntax-keyword-declaration: #1f0053;
-$dark-syntax-keyword-namespace: #1f0053;
-$dark-syntax-keyword-pseudo: #1f0053;
-$dark-syntax-keyword-reserved: #1f0053;
-$dark-syntax-keyword-type: #1f0053;
-$dark-syntax-keyword: #1f0053;
+$dark-syntax-keyword-constant: #ffe4d6;
+$dark-syntax-keyword-declaration: #ffe4d6;
+$dark-syntax-keyword-namespace: #ffe4d6;
+$dark-syntax-keyword-pseudo: #ffe4d6;
+$dark-syntax-keyword-reserved: #ffe4d6;
+$dark-syntax-keyword-type: #ffe4d6;
+$dark-syntax-keyword: #ffe4d6;
 $dark-syntax-literal-date: #1f0053;
 $dark-syntax-literal: #1f0053;
 $dark-syntax-name-attribute: #1f0053;
@@ -133,13 +133,13 @@ $dark-syntax-name-variable-instance: #1f0053;
 $dark-syntax-name-variable-magic: #1f0053;
 $dark-syntax-name-variable: #1f0053;
 $dark-syntax-name: #1f0053;
-$dark-syntax-number-bin: #1f0053;
-$dark-syntax-number-float: #1f0053;
-$dark-syntax-number-hex: #1f0053;
-$dark-syntax-number-integer-long: #1f0053;
-$dark-syntax-number-integer: #1f0053;
-$dark-syntax-number-oct: #1f0053;
-$dark-syntax-number: #1f0053;
+$dark-syntax-number-bin: #ffe4d6;
+$dark-syntax-number-float: #ffe4d6;
+$dark-syntax-number-hex: #ffe4d6;
+$dark-syntax-number-integer-long: #ffe4d6;
+$dark-syntax-number-integer: #ffe4d6;
+$dark-syntax-number-oct: #ffe4d6;
+$dark-syntax-number: #ffe4d6;
 $dark-syntax-operator-word: #1f0053;
 $dark-syntax-operator: #1f0053;
 $dark-syntax-string-affix: #1f0053;
