--- a/_sass/yolo/brand/theme/_mint.scss
+++ b/_sass/yolo/brand/theme/_mint.scss
@@ -4,12 +4,12 @@
 // primary colors
 $light-primary-color: #f4fff4;
 $light-on-primary-color: #006e2e;
-$light-primary-container-color: #00c854;
+$light-primary-container-color: #00a445;
 $light-on-primary-container-color: #f4fff4;
 // secondary colors  
-$light-secondary-color: #00c854;
+$light-secondary-color: #00a445;
 $light-on-secondary-color: #f4fff4;
-$light-secondary-container-color: #00c854;
+$light-secondary-container-color: #00a445;
 $light-on-secondary-container-color: #f4fff4;
 // tertiary colors
 $light-tertiary-color: #008343;
