WIP index.md refactor

--- a/_sass/yolo/brand/theme/_black-white.scss
+++ b/_sass/yolo/brand/theme/_black-white.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #fff;
 // tertiary colors
 $light-tertiary-color: #000;
 $light-on-tertiary-color: #fff;
-// general colors
+// link colors
 $light-link-color: #0091ea;
-$light-neutral-color: #000;
-$light-on-neutral-color: #fff;
 // font families
 $light-font-family-primary: "Open Sans", sans-serif;
 $light-font-family-secondary: "Poppins", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #000;
 // tertiary colors
 $dark-tertiary-color: #fff;
 $dark-on-tertiary-color: #000;
-// general colors
+// link colors
 $dark-link-color: #0091ea;
-$dark-neutral-color: #fff;
-$dark-on-neutral-color: #000;
 // font families
 $dark-font-family-primary: "Open Sans", sans-serif;
 $dark-font-family-secondary: "Poppins", sans-serif;
