--- a/_sass/yolo/brand/theme/_bluebonnet.scss
+++ b/_sass/yolo/brand/theme/_bluebonnet.scss
@@ -8,16 +8,14 @@ $light-primary-container-color: #051c69;
 $light-on-primary-container-color: #edebff;
 // secondary colors
 $light-secondary-color: #642e7f;
-$light-on-secondary-color: #f3e6f5;
+$light-on-secondary-color: #edebff;
 $light-secondary-container-color: #110b53;
-$light-on-secondary-container-color: #f3e6f5;
+$light-on-secondary-container-color: #edebff;
 // tertiary colors
 $light-tertiary-color: #00a344;
 $light-on-tertiary-color: #edebff;
-// general colors
+// link colors
 $light-link-color: #03a7db;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Poppins", sans-serif;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #110b53;
 // tertiary colors
 $dark-tertiary-color: #00d257;
 $dark-on-tertiary-color: #110b53;
-// general colors
+// link colors
 $dark-link-color: #21bced;
-$dark-neutral-color: #212121;
-$dark-on-neutral-color: #e0e0e0;
 // font families
 $dark-font-family-primary: "Poppins", sans-serif;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
