--- a/_sass/yolo/brand/theme/_bubblegum.scss
+++ b/_sass/yolo/brand/theme/_bubblegum.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #fff0f3;
 // tertiary colors
 $light-tertiary-color: #ff87bd;
 $light-on-tertiary-color: #c9184b;
-// general colors
+// link colors
 $light-link-color: #ff87bd;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Hepta Slab", serif;
 $light-font-family-secondary: "Poppins", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #c9184b;
 // tertiary colors
 $dark-tertiary-color: #ffa1cb;
 $dark-on-tertiary-color: #c9184b;
-// general colors
+// link colors
 $dark-link-color: #ffa1cb;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Hepta Slab", serif;
 $dark-font-family-secondary: "Poppins", sans-serif;
