--- a/_sass/yolo/brand/theme/_cooleo.scss
+++ b/_sass/yolo/brand/theme/_cooleo.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #f72685;
 // tertiary colors
 $light-tertiary-color: #fff;
 $light-on-tertiary-color: #f72685;
-// general colors
+// link colors
 $light-link-color: #fff;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Poppins", sans-serif;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #21065f;
 // tertiary colors
 $dark-tertiary-color: #fff;
 $dark-on-tertiary-color: #21065f;
-// general colors
+// link colors
 $dark-link-color: #fff;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Poppins", sans-serif;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
