--- a/_sass/yolo/brand/theme/_corbs.scss
+++ b/_sass/yolo/brand/theme/_corbs.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #f72685;
 // tertiary colors
 $light-tertiary-color: #f72685;
 $light-on-tertiary-color: #ecefff;
-// general colors
+// link colors
 $light-link-color: #21bced;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Source Code Pro", monospace;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #f72685;
 // tertiary colors
 $dark-tertiary-color: #f72685;
 $dark-on-tertiary-color: #0f0132;
-// general colors
+// link colors
 $dark-link-color: #32cdff;
-$dark-neutral-color: #212121;
-$dark-on-neutral-color: #e0e0e0;
 // font families
 $dark-font-family-primary: "Source Code Pro", monospace;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
