--- a/_sass/yolo/brand/theme/_domino.scss
+++ b/_sass/yolo/brand/theme/_domino.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #fff;
 // tertiary colors
 $light-tertiary-color: #00c853;
 $light-on-tertiary-color: #000;
-// general colors
+// link colors
 $light-link-color: #0091ea;
-$light-neutral-color: #000;
-$light-on-neutral-color: #fff;
 // font families
 $light-font-family-primary: "Source Code Pro", monospace;
 $light-font-family-secondary: "Open Sans", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #000;
 // tertiary colors
 $dark-tertiary-color: #00e676;
 $dark-on-tertiary-color: #000;
-// general colors
+// link colors
 $dark-link-color: #4995ef;
-$dark-neutral-color: #fff;
-$dark-on-neutral-color: #000;
 // font families
 $dark-font-family-primary: "Source Code Pro", monospace;
 $dark-font-family-secondary: "Open Sans", sans-serif;
