--- a/_sass/yolo/brand/theme/_dusk.scss
+++ b/_sass/yolo/brand/theme/_dusk.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #ffd0b2;
 // tertiary colors  
 $light-tertiary-color: #f45e02;
 $light-on-tertiary-color: #fff3eb;
-// general colors  
+// link colors
 $light-link-color: #00a0ff;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;  
 // font families  
 $light-font-family-primary: "Red Hat Mono", monospace;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #ffd0b2;
 // tertiary colors  
 $dark-tertiary-color: #fe6c11;
 $dark-on-tertiary-color: #0d0221;
-// general colors  
+// link colors
 $dark-link-color: #b2feff;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families  
 $dark-font-family-primary: "Red Hat Mono", monospace;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
