--- a/_sass/yolo/brand/theme/_grape.scss
+++ b/_sass/yolo/brand/theme/_grape.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #f3e6f5;
 // tertiary colors
 $light-tertiary-color: #ab00ff;
 $light-on-tertiary-color: #f3e6f5;
-// general colors
+// link colors
 $light-link-color: #ab00ff;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Poppins", sans-serif;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #4a138c;
 // tertiary colors
 $dark-tertiary-color: #c349ff;
 $dark-on-tertiary-color: #4a138c;
-// general colors
+// link colors
 $dark-link-color: #c349ff;
-$dark-neutral-color: #212121;
-$dark-on-neutral-color: #e0e0e0;
 // font families
 $dark-font-family-primary: "Poppins", sans-serif;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
