--- a/_sass/yolo/brand/theme/_mint.scss
+++ b/_sass/yolo/brand/theme/_mint.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #f4fff4;
 // tertiary colors
 $light-tertiary-color: #008343;
 $light-on-tertiary-color: #f4fff4;
-// general colors
+// link colors
 $light-link-color: #000;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Poppins", sans-serif;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #00a344;
 // tertiary colors
 $dark-tertiary-color: #11ff89;
 $dark-on-tertiary-color: #00a344;
-// general colors
+// link colors
 $dark-link-color: #000;
-$dark-neutral-color: #212121;
-$dark-on-neutral-color: #e0e0e0;
 // font families
 $dark-font-family-primary: "Poppins", sans-serif;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
