--- a/_sass/yolo/brand/theme/_newwave.scss
+++ b/_sass/yolo/brand/theme/_newwave.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #bf3efd;
 // tertiary colors
 $light-tertiary-color: #f9246c;
 $light-on-tertiary-color: #feebf2;
-// general colors
+// link colors
 $light-link-color: #4597ff;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Red Hat Mono", monospace;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #bf3efd;
 // tertiary colors
 $dark-tertiary-color: #3b6afe;
 $dark-on-tertiary-color: #090b35;
-// general colors
+// link colors
 $dark-link-color: #4f9dff;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Red Hat Mono", monospace;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
