--- a/_sass/yolo/brand/theme/_reveal.scss
+++ b/_sass/yolo/brand/theme/_reveal.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #ebfaff;
 // tertiary colors
 $light-tertiary-color: #f72685;
 $light-on-tertiary-color: #feebf4;
-// general colors
+// link colors
 $light-link-color: #339ff4;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Inconsolata", monospace;
 $light-font-family-secondary: "Montserrat", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #ebfaff;
 // tertiary colors
 $dark-tertiary-color: #f72685;
 $dark-on-tertiary-color: #091129;
-// general colors
+// link colors
 $dark-link-color: #339ff4;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Inconsolata", monospace;
 $dark-font-family-secondary: "Montserrat", sans-serif;
