--- a/_sass/yolo/brand/theme/_yolo.scss
+++ b/_sass/yolo/brand/theme/_yolo.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #d7c6f3;
 // tertiary colors
 $light-tertiary-color: #d80f8a;
 $light-on-tertiary-color: #f8faff;
-// general colors
+// link colors
 $light-link-color: #0091ea;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Red Hat Mono", monospace;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #f6a5d4;
 // tertiary colors
 $dark-tertiary-color: #0ca9f4;
 $dark-on-tertiary-color: #010d13;
-// general colors
+// link colors
 $dark-link-color: #65cffc;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Red Hat Mono", monospace;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
