--- a/_sass/yolo/brand/theme/_zoot.scss
+++ b/_sass/yolo/brand/theme/_zoot.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #edf2f4;
 // tertiary colors
 $light-tertiary-color: #d90529;
 $light-on-tertiary-color: #edf2f4;
-// general colors
+// link colors
 $light-link-color: #ef243c;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Red Hat Text", sans-serif;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #101119;
 // tertiary colors
 $dark-tertiary-color: #fa1137;
 $dark-on-tertiary-color: #101119;
-// general colors
+// link colors
 $dark-link-color: #32cdff;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Red Hat Text", sans-serif;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
