--- a/_sass/yolo/brand/_colors.scss
+++ b/_sass/yolo/brand/_colors.scss
@@ -11,20 +11,24 @@
   }
 }
 // ----------------------------------------------------------------------------
-// Sass variables for error, warn and info colors
+// Sass variables for neutral, error, warn and info colors
 // ----------------------------------------------------------------------------
+$light-neutral-color: #212121;
+$light-on-neutral-color: #e0e0e0;
 $light-error-color: #b71c1c;
 $light-on-error-color: #ffcdd2;
 $light-warn-color: #ffee58;
-$light-on-warn-color: #212121;
+$light-on-warn-color: #6d6400;
 $light-info-color: #1565c0;
 $light-on-info-color: #bbdefb;
-$dark-error-color: #ffcdd2;
-$dark-on-error-color: #b71c1c;
-$dark-warn-color: #212121;
-$dark-on-warn-color: #ffee58;
-$dark-info-color: #bbdefb;
-$dark-on-info-color: #1565c0;
+$dark-neutral-color: #e0e0e0;
+$dark-on-neutral-color: #212121;
+$dark-error-color: #b71c1c;
+$dark-on-error-color: #ffcdd2;
+$dark-warn-color: #ffee58;
+$dark-on-warn-color: #6d6400;
+$dark-info-color: #1565c0;
+$dark-on-info-color: #bbdefb;
 // ----------------------------------------------------------------------------
 // Sass variables to CSS globals for light mode colors
 // ----------------------------------------------------------------------------
