--- a/_sass/yolo/brand/theme/_folly.scss
+++ b/_sass/yolo/brand/theme/_folly.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #ff6a1e;
 // tertiary colors
 $light-tertiary-color: #ffc9ad;
 $light-on-tertiary-color: #1f0053;
-// general colors
+// link colors
 $light-link-color: #ffe4d6;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Poppins", sans-serif;
 $light-font-family-secondary: "Montserrat", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #1f0053;
 // tertiary colors
 $dark-tertiary-color: #ffc9ad;
 $dark-on-tertiary-color: #1f0053;
-// general colors
+// link colors
 $dark-link-color: #ffe4d6;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Poppins", sans-serif;
 $dark-font-family-secondary: "Montserrat", sans-serif;
