--- a/_sass/yolo/brand/theme/_newspaper.scss
+++ b/_sass/yolo/brand/theme/_newspaper.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #e0e0e0;
 // tertiary colors
 $light-tertiary-color: #0091ea;
 $light-on-tertiary-color: #e0e0e0;
-// general colors
+// link colors
 $light-link-color: #f72685;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Hepta Slab", serif;
 $light-font-family-secondary: "Red Hat Text", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #0a0a0a;
 // tertiary colors
 $dark-tertiary-color: #0091ea;
 $dark-on-tertiary-color: #e0e0e0;
-// general colors
+// link colors
 $dark-link-color: #f72685;
-$dark-neutral-color: #212121;
-$dark-on-neutral-color: #e0e0e0;
 // font families
 $dark-font-family-primary: "Hepta Slab", serif;
 $dark-font-family-secondary: "Red Hat Text", sans-serif;
