--- a/_sass/yolo/brand/theme/_seaside.scss
+++ b/_sass/yolo/brand/theme/_seaside.scss
@@ -14,10 +14,8 @@ $light-on-secondary-container-color: #015d8f;
 // tertiary colors
 $light-tertiary-color: #f95838;
 $light-on-tertiary-color: #f9e1dc;
-// general colors
+// link colors
 $light-link-color: #0bb4d8;
-$light-neutral-color: #212121;
-$light-on-neutral-color: #e0e0e0;
 // font families
 $light-font-family-primary: "Poppins", sans-serif;
 $light-font-family-secondary: "Raleway", sans-serif;
@@ -38,10 +36,8 @@ $dark-on-secondary-container-color: #90e0ef;
 // tertiary colors
 $dark-tertiary-color: #f95838;
 $dark-on-tertiary-color: #250600;
-// general colors
+// link colors
 $dark-link-color: #0692e0;
-$dark-neutral-color: #e0e0e0;
-$dark-on-neutral-color: #212121;
 // font families
 $dark-font-family-primary: "Poppins", sans-serif;
 $dark-font-family-secondary: "Raleway", sans-serif;
