--- a/_sass/yolo/brand/syntax/_aloha.scss
+++ b/_sass/yolo/brand/syntax/_aloha.scss
@@ -1,158 +1,158 @@
 // ----------------------------------------------------------------------------
 // aloha light-mode syntax theme
 // ----------------------------------------------------------------------------
-$light-syntax-text: #ff6a1e;
-$light-syntax-container-color: #1f0053;
-$light-syntax-highlight-line: #ff6a1e;
-$light-syntax-error: #ff6a1e;
-$light-syntax-punctuation: #ffe4d6;
-$light-syntax-text-whitespace: #ff6a1e;
-$light-syntax-comment-hashbang: #ffe4d6;
-$light-syntax-comment-multiline: #ffe4d6;
-$light-syntax-comment-preproc: #ffe4d6;
-$light-syntax-comment-preprocfile: #ffe4d6;
-$light-syntax-comment-single: #ffe4d6;
-$light-syntax-comment-special: #ffe4d6;
-$light-syntax-comment: #ffe4d6;
-$light-syntax-generic-deleted: #ff6a1e;
-$light-syntax-generic-emph: #ff6a1e;
-$light-syntax-generic-error: #ff6a1e;
-$light-syntax-generic-heading: #ff6a1e;
-$light-syntax-generic-inserted: #ff6a1e;
-$light-syntax-generic-output: #ff6a1e;
-$light-syntax-generic-prompt: #ff6a1e;
-$light-syntax-generic-strong: #ff6a1e;
-$light-syntax-generic-subheading: #ff6a1e;
-$light-syntax-generic-traceback: #ff6a1e;
-$light-syntax-keyword-constant: #ffe4d6;
-$light-syntax-keyword-declaration: #ffe4d6;
-$light-syntax-keyword-namespace: #ffe4d6;
-$light-syntax-keyword-pseudo: #ffe4d6;
-$light-syntax-keyword-reserved: #ffe4d6;
-$light-syntax-keyword-type: #ffe4d6;
-$light-syntax-keyword: #ffe4d6;
-$light-syntax-literal-date: #ff6a1e;
-$light-syntax-literal: #ff6a1e;
-$light-syntax-name-attribute: #ff6a1e;
-$light-syntax-name-builtin-pseudo: #ff6a1e;
-$light-syntax-name-builtin: #ff6a1e;
-$light-syntax-name-class: #ff6a1e;
-$light-syntax-name-constant: #ff6a1e;
-$light-syntax-name-decorator: #ff6a1e;
-$light-syntax-name-entity: #ff6a1e;
-$light-syntax-name-exception: #ff6a1e;
-$light-syntax-name-function-magic: #ff6a1e;
-$light-syntax-name-function: #ff6a1e;
-$light-syntax-name-label: #ff6a1e;
-$light-syntax-name-namespace: #ff6a1e;
-$light-syntax-name-other: #ff6a1e;
-$light-syntax-name-property: #ff6a1e;
-$light-syntax-name-tag: #ff6a1e;
-$light-syntax-name-variable-class: #ff6a1e;
-$light-syntax-name-variable-global: #ff6a1e;
-$light-syntax-name-variable-instance: #ff6a1e;
-$light-syntax-name-variable-magic: #ff6a1e;
-$light-syntax-name-variable: #ff6a1e;
-$light-syntax-name: #ff6a1e;
-$light-syntax-number-bin: #ffe4d6;
-$light-syntax-number-float: #ffe4d6;
-$light-syntax-number-hex: #ffe4d6;
-$light-syntax-number-integer-long: #ffe4d6;
-$light-syntax-number-integer: #ffe4d6;
-$light-syntax-number-oct: #ffe4d6;
-$light-syntax-number: #ffe4d6;
-$light-syntax-operator-word: #ff6a1e;
-$light-syntax-operator: #ff6a1e;
-$light-syntax-string-affix: #ff6a1e;
-$light-syntax-string-backtick: #ff6a1e;
-$light-syntax-string-char: #ff6a1e;
-$light-syntax-string-delimiter: #ff6a1e;
-$light-syntax-string-doc: #ff6a1e;
-$light-syntax-string-double: #ff6a1e;
-$light-syntax-string-escape: #ff6a1e;
-$light-syntax-string-heredoc: #ff6a1e;
-$light-syntax-string-interpol: #ff6a1e;
-$light-syntax-string-other: #ff6a1e;
-$light-syntax-string-regex: #ff6a1e;
-$light-syntax-string-single: #ff6a1e;
-$light-syntax-string-symbol: #ff6a1e;
-$light-syntax-string: #ff6a1e;
+$light-syntax-text: #cbf0f8;
+$light-syntax-container-color: #02033b;
+$light-syntax-comment-hashbang: #fc9867;
+$light-syntax-comment-multiline: #fc9867;
+$light-syntax-comment-preproc: #fc9867;
+$light-syntax-comment-preprocfile: #fc9867;
+$light-syntax-comment-single: #fc9867;
+$light-syntax-comment-special: #fc9867;
+$light-syntax-comment: #fc9867;
+$light-syntax-error: #ff6288;
+$light-syntax-generic-deleted: #ff6288;
+$light-syntax-generic-emph: #ff9f00;
+$light-syntax-generic-error: #ff9f00;
+$light-syntax-generic-heading: #ff9f00;
+$light-syntax-generic-inserted: #ff9f00;
+$light-syntax-generic-output: #ff9f00;
+$light-syntax-generic-prompt: #ff9f00;
+$light-syntax-generic-strong: #ff9f00;
+$light-syntax-generic-subheading: #ff9f00;
+$light-syntax-generic-traceback: #ff9f00;
+$light-syntax-highlight-line: #ff6d00;
+$light-syntax-keyword-constant: #0bb4d8;
+$light-syntax-keyword-declaration: #0bb4d8;
+$light-syntax-keyword-namespace: #ff9201;
+$light-syntax-keyword-pseudo: #0bb4d8;
+$light-syntax-keyword-reserved: #0bb4d8;
+$light-syntax-keyword-type: #0bb4d8;
+$light-syntax-keyword: #0bb4d8;
+$light-syntax-literal-date: #ff6d00;
+$light-syntax-literal: #ff6d00;
+$light-syntax-name-attribute: #21daff;
+$light-syntax-name-builtin-pseudo: #cbf0f8;
+$light-syntax-name-builtin: #cbf0f8;
+$light-syntax-name-class: #21daff;
+$light-syntax-name-constant: #0bb4d8;
+$light-syntax-name-decorator: #21daff;
+$light-syntax-name-entity: #cbf0f8;
+$light-syntax-name-exception: #21daff;
+$light-syntax-name-function-magic: #21daff;
+$light-syntax-name-function: #21daff;
+$light-syntax-name-label: #ff9201;
+$light-syntax-name-namespace: #cbf0f8;
+$light-syntax-name-other: #21daff;
+$light-syntax-name-property: #21daff;
+$light-syntax-name-tag: #ff9201;
+$light-syntax-name-variable-class: #cbf0f8;
+$light-syntax-name-variable-global: #cbf0f8;
+$light-syntax-name-variable-instance: #cbf0f8;
+$light-syntax-name-variable-magic: #cbf0f8;
+$light-syntax-name-variable: #cbf0f8;
+$light-syntax-name: #cbf0f8;
+$light-syntax-number-bin: #1592e1;
+$light-syntax-number-float: #1592e1;
+$light-syntax-number-hex: #1592e1;
+$light-syntax-number-integer-long: #1592e1;
+$light-syntax-number-integer: #1592e1;
+$light-syntax-number-oct: #1592e1;
+$light-syntax-number: #1592e1;
+$light-syntax-operator-word: #ff9201;
+$light-syntax-operator: #ff9201;
+$light-syntax-punctuation: #cbf0f8;
+$light-syntax-string-affix: #ff6d00;
+$light-syntax-string-backtick: #ff6d00;
+$light-syntax-string-char: #ff6d00;
+$light-syntax-string-delimiter: #ff6d00;
+$light-syntax-string-doc: #ff6d00;
+$light-syntax-string-double: #ff6d00;
+$light-syntax-string-escape: #21daff;
+$light-syntax-string-heredoc: #ff6d00;
+$light-syntax-string-interpol: #ff6d00;
+$light-syntax-string-other: #ff6d00;
+$light-syntax-string-regex: #ff6d00;
+$light-syntax-string-single: #ff6d00;
+$light-syntax-string-symbol: #ff6d00;
+$light-syntax-string: #ff6d00;
+$light-syntax-text-whitespace: #cbf0f8;
 // ----------------------------------------------------------------------------
 // aloha dark-mode syntax theme
 // ----------------------------------------------------------------------------
-$dark-syntax-text: #1f0053;
-$dark-syntax-container-color: #ff6a1e;
-$dark-syntax-highlight-line: #1f0053;
-$dark-syntax-error: #1f0053;
-$dark-syntax-punctuation: #ffe4d6;
-$dark-syntax-text-whitespace: #1f0053;
-$dark-syntax-comment-hashbang: #ffe4d6;
-$dark-syntax-comment-multiline: #ffe4d6;
-$dark-syntax-comment-preproc: #ffe4d6;
-$dark-syntax-comment-preprocfile: #ffe4d6;
-$dark-syntax-comment-single: #ffe4d6;
-$dark-syntax-comment-special: #ffe4d6;
-$dark-syntax-comment: #ffe4d6;
-$dark-syntax-generic-deleted: #1f0053;
-$dark-syntax-generic-emph: #1f0053;
-$dark-syntax-generic-error: #1f0053;
-$dark-syntax-generic-heading: #1f0053;
-$dark-syntax-generic-inserted: #1f0053;
-$dark-syntax-generic-output: #1f0053;
-$dark-syntax-generic-prompt: #1f0053;
-$dark-syntax-generic-strong: #1f0053;
-$dark-syntax-generic-subheading: #1f0053;
-$dark-syntax-generic-traceback: #1f0053;
-$dark-syntax-keyword-constant: #ffe4d6;
-$dark-syntax-keyword-declaration: #ffe4d6;
-$dark-syntax-keyword-namespace: #ffe4d6;
-$dark-syntax-keyword-pseudo: #ffe4d6;
-$dark-syntax-keyword-reserved: #ffe4d6;
-$dark-syntax-keyword-type: #ffe4d6;
-$dark-syntax-keyword: #ffe4d6;
-$dark-syntax-literal-date: #1f0053;
-$dark-syntax-literal: #1f0053;
-$dark-syntax-name-attribute: #1f0053;
-$dark-syntax-name-builtin-pseudo: #1f0053;
-$dark-syntax-name-builtin: #1f0053;
-$dark-syntax-name-class: #1f0053;
-$dark-syntax-name-constant: #1f0053;
-$dark-syntax-name-decorator: #1f0053;
-$dark-syntax-name-entity: #1f0053;
-$dark-syntax-name-exception: #1f0053;
-$dark-syntax-name-function-magic: #1f0053;
-$dark-syntax-name-function: #1f0053;
-$dark-syntax-name-label: #1f0053;
-$dark-syntax-name-namespace: #1f0053;
-$dark-syntax-name-other: #1f0053;
-$dark-syntax-name-property: #1f0053;
-$dark-syntax-name-tag: #1f0053;
-$dark-syntax-name-variable-class: #1f0053;
-$dark-syntax-name-variable-global: #1f0053;
-$dark-syntax-name-variable-instance: #1f0053;
-$dark-syntax-name-variable-magic: #1f0053;
-$dark-syntax-name-variable: #1f0053;
-$dark-syntax-name: #1f0053;
-$dark-syntax-number-bin: #ffe4d6;
-$dark-syntax-number-float: #ffe4d6;
-$dark-syntax-number-hex: #ffe4d6;
-$dark-syntax-number-integer-long: #ffe4d6;
-$dark-syntax-number-integer: #ffe4d6;
-$dark-syntax-number-oct: #ffe4d6;
-$dark-syntax-number: #ffe4d6;
-$dark-syntax-operator-word: #1f0053;
-$dark-syntax-operator: #1f0053;
-$dark-syntax-string-affix: #1f0053;
-$dark-syntax-string-backtick: #1f0053;
-$dark-syntax-string-char: #1f0053;
-$dark-syntax-string-delimiter: #1f0053;
-$dark-syntax-string-doc: #1f0053;
-$dark-syntax-string-double: #1f0053;
-$dark-syntax-string-escape: #1f0053;
-$dark-syntax-string-heredoc: #1f0053;
-$dark-syntax-string-interpol: #1f0053;
-$dark-syntax-string-other: #1f0053;
-$dark-syntax-string-regex: #1f0053;
-$dark-syntax-string-single: #1f0053;
-$dark-syntax-string-symbol: #1f0053;
-$dark-syntax-string: #1f0053;
+$dark-syntax-text: #02033b;
+$dark-syntax-container-color: #cbf0f8;
+$dark-syntax-comment-hashbang: #04045e;
+$dark-syntax-comment-multiline: #04045e;
+$dark-syntax-comment-preproc: #04045e;
+$dark-syntax-comment-preprocfile: #04045e;
+$dark-syntax-comment-single: #04045e;
+$dark-syntax-comment-special: #04045e;
+$dark-syntax-comment: #04045e;
+$dark-syntax-error: #f61249;
+$dark-syntax-generic-deleted: #f61249;
+$dark-syntax-generic-emph: #ff9f00;
+$dark-syntax-generic-error: #ff9f00;
+$dark-syntax-generic-heading: #ff9f00;
+$dark-syntax-generic-inserted: #ff9f00;
+$dark-syntax-generic-output: #ff9f00;
+$dark-syntax-generic-prompt: #ff9f00;
+$dark-syntax-generic-strong: #ff9f00;
+$dark-syntax-generic-subheading: #ff9f00;
+$dark-syntax-generic-traceback: #ff9f00;
+$dark-syntax-highlight-line: #ff6d00;
+$dark-syntax-keyword-constant: #1592e1;
+$dark-syntax-keyword-declaration: #1592e1;
+$dark-syntax-keyword-namespace: #ff9201;
+$dark-syntax-keyword-pseudo: #1592e1;
+$dark-syntax-keyword-reserved: #1592e1;
+$dark-syntax-keyword-type: #1592e1;
+$dark-syntax-keyword: #1592e1;
+$dark-syntax-literal-date: #ff6d00;
+$dark-syntax-literal: #ff6d00;
+$dark-syntax-name-attribute: #0577b6;
+$dark-syntax-name-builtin-pseudo: #02033b;
+$dark-syntax-name-builtin: #02033b;
+$dark-syntax-name-class: #0577b6;
+$dark-syntax-name-constant: #0bb4d8;
+$dark-syntax-name-decorator: #0577b6;
+$dark-syntax-name-entity: #02033b;
+$dark-syntax-name-exception: #0577b6;
+$dark-syntax-name-function-magic: #0577b6;
+$dark-syntax-name-function: #0577b6;
+$dark-syntax-name-label: #d15300;
+$dark-syntax-name-namespace: #02033b;
+$dark-syntax-name-other: #0577b6;
+$dark-syntax-name-property: #0577b6;
+$dark-syntax-name-tag: #d15300;
+$dark-syntax-name-variable-class: #02033b;
+$dark-syntax-name-variable-global: #02033b;
+$dark-syntax-name-variable-instance: #02033b;
+$dark-syntax-name-variable-magic: #02033b;
+$dark-syntax-name-variable: #02033b;
+$dark-syntax-name: #02033b;
+$dark-syntax-number-bin: #1592e1;
+$dark-syntax-number-float: #1592e1;
+$dark-syntax-number-hex: #1592e1;
+$dark-syntax-number-integer-long: #1592e1;
+$dark-syntax-number-integer: #1592e1;
+$dark-syntax-number-oct: #1592e1;
+$dark-syntax-number: #1592e1;
+$dark-syntax-operator-word: #ff9201;
+$dark-syntax-operator: #ff9201;
+$dark-syntax-punctuation: #02033b;
+$dark-syntax-string-affix: #ff5500;
+$dark-syntax-string-backtick: #ff5500;
+$dark-syntax-string-char: #ff5500;
+$dark-syntax-string-delimiter: #ff5500;
+$dark-syntax-string-doc: #ff5500;
+$dark-syntax-string-double: #ff5500;
+$dark-syntax-string-escape: #0577b6;
+$dark-syntax-string-heredoc: #ff5500;
+$dark-syntax-string-interpol: #ff5500;
+$dark-syntax-string-other: #ff5500;
+$dark-syntax-string-regex: #ff5500;
+$dark-syntax-string-single: #ff5500;
+$dark-syntax-string-symbol: #ff5500;
+$dark-syntax-string: #ff5500;
+$dark-syntax-text-whitespace: #02033b;
