--- a/_sass/yolo/brand/theme/_aloha.scss
+++ b/_sass/yolo/brand/theme/_aloha.scss
@@ -1,25 +1,27 @@
 // ----------------------------------------------------------------------------
+// aloha font-families
+// ----------------------------------------------------------------------------
+$font-family-primary: "Manrope", sans-serif;
+$font-family-secondary: "Poppins", sans-serif;
+$font-family-monospace: "Roboto Mono", monospace;
+// ----------------------------------------------------------------------------
 // aloha light-mode
 // ----------------------------------------------------------------------------
 // primary colors
-$light-primary-color: #cbf0f8;
+$light-primary-color: #daf6fc;
 $light-on-primary-color: #02033b;
-$light-primary-container-color: #0bb4d8;
+$light-primary-container-color: #22c6ed;
 $light-on-primary-container-color: #04045e;
 // secondary colors
 $light-secondary-color: #04045e;
 $light-on-secondary-color: #ebefff;
-$light-secondary-container-color: #0bb4d8;
-$light-on-secondary-container-color: #cbf0f8;
+$light-secondary-container-color: #fff7eb;
+$light-on-secondary-container-color: #ff6d00;
 // tertiary colors
 $light-tertiary-color: #ff6d00;
 $light-on-tertiary-color: #fff4eb;
 // link colors
-$light-link-color: #0577b6;
-// font families
-$light-font-family-primary: "Raleway", sans-serif;
-$light-font-family-secondary: "Montserrat", sans-serif;
-$light-font-family-monospace: "Red Hat Mono", monospace;
+$light-link-color: #1592e1;
 // ----------------------------------------------------------------------------
 // aloha dark-mode
 // ----------------------------------------------------------------------------
@@ -38,7 +40,3 @@ $dark-tertiary-color: #21daff;
 $dark-on-tertiary-color: #04045e;
 // link colors
 $dark-link-color: #1592e1;
-// font families
-$dark-font-family-primary: "Raleway", sans-serif;
-$dark-font-family-secondary: "Montserrat", sans-serif;
-$dark-font-family-monospace: "Red Hat Mono", monospace;
